infrastructure/prod/garmento.namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: garmento
  labels:
    name: garmento
